Enh: Auto text color (black or white) for buttons based on the background color, darkening the success color to match WCAG minimum contrast while keeping white text color https://github.com/humhub/humhub-internal/issues/854

--- a/static/scss/_button.scss
+++ b/static/scss/_button.scss
@@ -58,37 +58,3 @@
 .btn-group-lg > .btn {
     --bs-btn-padding-x: 1.2rem;
 }
-
-$white-button-variant-colors: (
-    primary: $primary,
-    accent: $accent,
-    secondary: $secondary,
-    success: $success,
-    danger: $danger,
-    warning: $warning,
-    info: $info,
-    dark: $dark
-);
-
-@mixin button-variant-dark-active($color, $darken-amount: 10%) {
-    --bs-btn-active-bg: #{darken($color, $darken-amount)};
-}
-
-@each $variant, $color in $white-button-variant-colors {
-    .btn-#{$variant} {
-        // Force white text color
-        --bs-btn-color: var(--hh-text-color-contrast);
-        --bs-btn-active-color: var(--hh-text-color-contrast);
-        --bs-btn-hover-color: var(--hh-text-color-contrast);
-        // Force active button background color shade (darken) instead of tint (lighten)
-        @include button-variant-dark-active($color);
-    }
-    .btn-outline-#{$variant} {
-        // Force white text color
-        --bs-btn-active-color: var(--hh-text-color-contrast);
-        --bs-btn-hover-color: var(--hh-text-color-contrast);
-    }
-    .btn-#{$variant}:disabled, .btn-#{$variant}.disabled, fieldset:disabled .btn-#{$variant} {
-        --bs-btn-disabled-color: var(--hh-text-color-contrast);
-    }
-}
